# rustchess

./: Cargo.toml  README.md
benches/: movegen.rs
src/: board.rs  game.rs  lib.rs  main.rs  movegen.rs  perft.rs  search.rs
tests/: movegen.rs  perft.rs  search.rs
