[package]
name = "rustchess"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustchess"
path = "src/lib.rs"

[dependencies]
strum = "0.27"
strum_macros = "0.27"
itertools = "0.14.0"
rustyline = "17.0.0"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "movegen"
harness = false

